--- a/templates/index.html
+++ b/templates/index.html
@@ -86,8 +86,10 @@
                 THROUGH AeduZ !
             </div>
             <div class="masthead-subheading">
-                
-                Guiding DREAMS Unlocking POTENTIAL
+                <span class="" style="background-color: rgb(151, 255, 238);border-radius: 10px;">
+
+                    Guiding DREAMS Unlocking POTENTIAL
+                </span>
             </div>
             {% if user.is_authenticated %}
             {% comment %} <li class="nav-item"><a class="nav-link" href="{% url 'account_logout' %}">Logout</a></li>
@@ -108,7 +110,7 @@
             </div> {% endcomment %}
             <ul class="timeline">
                 <li>
-                    <div class="timeline-image"><img class="rounded-circle img-fluid" src="{% static 'assets/img/about/1.jpg' %} " alt="..." /></div>
+                    <div class="timeline-image"><img class="rounded-circle img-fluid" src="{% static 'assets/img/about/who_we_are.png' %} " alt="..." /></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
                             {% comment %} <h4>2009-2011</h4> {% endcomment %}
@@ -123,7 +125,7 @@ AeduZ is your premier destination for personalized mentorship. Through our innov
                     </div>
                 </li>
                 <li class="timeline-inverted">
-                    <div class="timeline-image"><img class="rounded-circle img-fluid" src="{% static 'assets/img/about/2.jpg' %} " alt="..." />
+                    <div class="timeline-image"><img class="rounded-circle img-fluid" src="{% static 'assets/img/about/4.jpg' %} " alt="..." />
                     </div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
@@ -396,7 +398,7 @@ Insight into student challenges and needs
                 </div>
                 <div class="col-lg-3">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="{% static 'assets/img/team/aditya.jpg' %} " alt="..." />
+                        <img class="mx-auto rounded-circle" src="{% static 'assets/img/team/aditya.jpeg' %} " alt="..." />
                         <h4>Aditya Malhotra</h4>
                         <br>
                         <p class="text-muted">"Burning fire inside aspirants"</p>
@@ -408,7 +410,7 @@ Insight into student challenges and needs
                 </div>
                 <div class="col-lg-3">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="{% static 'assets/img/team/shubham.jpg' %} " alt="..." />
+                        <img class="mx-auto rounded-circle" src="{% static 'assets/img/team/shubham.jpeg' %} " alt="..." />
                         <h4>Shubham Jadhav</h4>
                         <br>
                         <p class="text-muted">"AeduZ connects future IITians with IITians"</p>
