--- a/templates/aeduz_base.html
+++ b/templates/aeduz_base.html
@@ -44,8 +44,8 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto text-uppercase">
                         <li class="nav-item"><a class="nav-link" href="/#about_id">About Us</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/institutes">Institutions</a></li>
-                        
+                        {% comment %} <li class="nav-item"><a class="nav-link" href="/institutes">Institutions</a></li> {% endcomment %}
+                        <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
                         {% if user.is_authenticated %}
                         <li class="nav-item dropdown">
                             <a class=" dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ user.username }}</a>
@@ -68,7 +68,7 @@
                             </div> -->
                         </li>
                         {% endif %}
-                        <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
+                        
                         <li class="nav-item"><a class="nav-link" href="/#contact">Contact Us</a></li>
                     </ul>
                 </div>
